@@ -1,20 +1,24 @@
 package client.utils;
 
+import client.ui.DialogStyler;
 import commons.Collection;
 import commons.EmbeddedFile;
 import commons.Note;
+import jakarta.ws.rs.ProcessingException;
 import jakarta.ws.rs.client.Client;
 import jakarta.ws.rs.client.ClientBuilder;
 import jakarta.ws.rs.client.Invocation;
 import jakarta.ws.rs.client.WebTarget;
 import jakarta.ws.rs.core.GenericType;
 import jakarta.ws.rs.core.Response;
-import org.checkerframework.checker.units.qual.C;
+import javafx.scene.control.Alert;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.Mock;
 import org.mockito.MockedStatic;
 import org.mockito.Mockito;
+import org.mockito.MockitoAnnotations;
 
 import java.io.File;
 import java.io.IOException;
@@ -22,26 +26,35 @@ import java.net.ConnectException;
 import java.util.Arrays;
 import java.util.List;
 
+import static jakarta.ws.rs.core.MediaType.APPLICATION_JSON;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 class ServerUtilsTest {
 
+    @Mock
+    private Config mockConfig;
+    @Mock
+    private DialogStyler mockDialogStyler;
     private ServerUtils serverUtils;
+
+    @Mock
     private Client clientMock;
+    @Mock
     private WebTarget targetMock;
+    @Mock
     private Invocation.Builder builderMock;
+    @Mock
     private Response responseMock;
+
     private MockedStatic<ClientBuilder> clientBuilderMockStatic;
 
     @BeforeEach
     void setUp() {
-        serverUtils = new ServerUtils();
-        clientMock = mock(Client.class);
-        targetMock = mock(WebTarget.class);
-        builderMock = mock(Invocation.Builder.class);
-        responseMock = mock(Response.class);
+        MockitoAnnotations.openMocks(this);
+
+        serverUtils = new ServerUtils(mockConfig, mockDialogStyler);
 
         clientBuilderMockStatic = Mockito.mockStatic(ClientBuilder.class);
         when(ClientBuilder.newClient(any())).thenReturn(clientMock);
@@ -53,17 +66,20 @@ class ServerUtilsTest {
 
     @AfterEach
     void tearDown() {
-        clientBuilderMockStatic.close(); // Ensure static mocking is deregistered
+        clientBuilderMockStatic.close();
     }
 
     @Test
     void addNote() {
-        Collection collection = new Collection("Collection Title");
+        Collection collection = new Collection("Collection Title", "http://mock-server.com");
         Note note = new Note("Note Title", "Note Body", collection);
 
+        when(clientMock.target("http://mock-server.com")).thenReturn(targetMock);
+        when(targetMock.path("api/notes")).thenReturn(targetMock);
         when(builderMock.post(any(), eq(Note.class))).thenReturn(note);
 
         Note result = serverUtils.addNote(note);
+
         assertNotNull(result);
         assertEquals("Note Title", result.title);
         verify(builderMock).post(any(), eq(Note.class));
@@ -71,41 +87,66 @@ class ServerUtilsTest {
 
     @Test
     void getAllNotes() {
-        Collection collection = new Collection("Collection Title");
-        Note note1 = new Note("Note Title 1", "Note Body 1", collection);
-        Note note2 = new Note("Note Title 2", "Note Body 2", collection);
-        List<Note> notes = Arrays.asList(note1, note2);
+        Collection collection1 = new Collection("Collection Title 1", "http://mock-server-1.com");
+        Collection collection2 = new Collection("Collection Title 2", "http://mock-server-2.com");
+        Note note1 = new Note("Note Title 1", "Note Body 1", collection1);
+        Note note2 = new Note("Note Title 2", "Note Body 2", collection2);
+        List<Collection> collections = Arrays.asList(collection1, collection2);
+        List<Note> notes1 = List.of(note1);
+        List<Note> notes2 = List.of(note2);
 
-        when(builderMock.get(any(GenericType.class))).thenReturn(notes);
+        when(mockConfig.readFromFile()).thenReturn(collections);
 
-        List<Note> result = serverUtils.getAllNotes();
+        // mock first server chain
+        WebTarget targetMock1 = mock(WebTarget.class);
+        WebTarget pathMock1 = mock(WebTarget.class);
+        WebTarget resolvedMock1 = mock(WebTarget.class);
+        Invocation.Builder builderMock1 = mock(Invocation.Builder.class);
+
+        when(clientMock.target("http://mock-server-1.com")).thenReturn(targetMock1);
+        when(targetMock1.path("/api/collection/{title}")).thenReturn(pathMock1);
+        when(pathMock1.resolveTemplate("title", "Collection Title 1")).thenReturn(resolvedMock1);
+        when(resolvedMock1.request(APPLICATION_JSON)).thenReturn(builderMock1);
+        when(builderMock1.get(any(GenericType.class))).thenReturn(notes1);
+
+        // mock second server chain
+        WebTarget targetMock2 = mock(WebTarget.class);
+        WebTarget pathMock2 = mock(WebTarget.class);
+        WebTarget resolvedMock2 = mock(WebTarget.class);
+        Invocation.Builder builderMock2 = mock(Invocation.Builder.class);
+
+        when(clientMock.target("http://mock-server-2.com")).thenReturn(targetMock2);
+        when(targetMock2.path("/api/collection/{title}")).thenReturn(pathMock2);
+        when(pathMock2.resolveTemplate("title", "Collection Title 2")).thenReturn(resolvedMock2);
+        when(resolvedMock2.request(APPLICATION_JSON)).thenReturn(builderMock2);
+        when(builderMock2.get(any(GenericType.class))).thenReturn(notes2);
+
+        // is server available to return true
+        ServerUtils spyServerUtils = spy(serverUtils);
+        doReturn(true).when(spyServerUtils).isServerAvailableWithAlert(anyString());
+
+        List<Note> result = spyServerUtils.getAllNotes();
+
         assertNotNull(result);
         assertEquals(2, result.size());
         assertEquals("Note Title 1", result.get(0).title);
-        verify(builderMock).get(any(GenericType.class));
-    }
-
-    @Test
-    void getNoteById() {
-        Collection collection = new Collection("Collection Title");
-        Note note = new Note("Note Title", "Note Body", collection);
-
-        when(builderMock.get(eq(Note.class))).thenReturn(note);
-
-        Note result = serverUtils.getNoteById(1L);
-        assertNotNull(result);
-        assertEquals("Note Title", result.title);
-        verify(builderMock).get(eq(Note.class));
+        assertEquals("Note Title 2", result.get(1).title);
     }
 
     @Test
     void updateNote() {
-        Collection collection = new Collection("Collection Title");
+        Collection collection = new Collection("Collection Title", "http://mock-server.com");
         Note note = new Note("Updated Title", "Updated Body", collection);
+        note.id = 1L;
 
+        when(clientMock.target("http://mock-server.com")).thenReturn(targetMock);
+        when(targetMock.path("api/notes/" + note.id)).thenReturn(targetMock);
         when(builderMock.put(any(), eq(Note.class))).thenReturn(note);
 
-        Note result = serverUtils.updateNote(note);
+        ServerUtils spyServerUtils = spy(serverUtils);
+        doReturn(true).when(spyServerUtils).isServerAvailableWithAlert(anyString());
+
+        Note result = spyServerUtils.updateNote(note);
         assertNotNull(result);
         assertEquals("Updated Title", result.title);
         verify(builderMock).put(any(), eq(Note.class));
@@ -113,24 +154,37 @@ class ServerUtilsTest {
 
     @Test
     void deleteNote() {
-        serverUtils.deleteNote(1L);
+        Collection collection = new Collection("Collection Title", "http://mock-server.com");
+        Note note = new Note("Note Title", "Note Body", collection);
+
+        when(clientMock.target("http://mock-server.com")).thenReturn(targetMock);
+        when(targetMock.path("api/notes/" + note.id)).thenReturn(targetMock);
+
+        serverUtils.deleteNote(note);
 
         verify(builderMock).delete();
     }
 
     @Test
     void getNotesByCollection() {
-        Collection collection = new Collection("Collection Title");
+        Collection collection = new Collection("Collection Title", "http://mock-server.com");
         Note note1 = new Note("Note Title 1", "Note Body 1", collection);
         Note note2 = new Note("Note Title 2", "Note Body 2", collection);
         List<Note> notes = Arrays.asList(note1, note2);
 
-        // Update mocks to match the expected chain
-        when(targetMock.path("/api/collection/{title}")).thenReturn(targetMock);
-        when(targetMock.resolveTemplate("title", "Collection Title")).thenReturn(targetMock);
+        WebTarget pathMock = mock(WebTarget.class);
+        WebTarget resolvedMock = mock(WebTarget.class);
+
+        when(clientMock.target("http://mock-server.com")).thenReturn(targetMock);
+        when(targetMock.path("/api/collection/{title}")).thenReturn(pathMock);
+        when(pathMock.resolveTemplate("title", "Collection Title")).thenReturn(resolvedMock);
+        when(resolvedMock.request(APPLICATION_JSON)).thenReturn(builderMock);
         when(builderMock.get(any(GenericType.class))).thenReturn(notes);
 
-        List<Note> result = serverUtils.getNotesByCollection(collection);
+        ServerUtils spyServerUtils = spy(serverUtils);
+        doReturn(true).when(spyServerUtils).isServerAvailableWithAlert(anyString());
+
+        List<Note> result = spyServerUtils.getNotesByCollection(collection);
         assertNotNull(result);
         assertEquals(2, result.size());
         assertEquals("Note Title 1", result.get(0).title);
@@ -139,61 +193,81 @@ class ServerUtilsTest {
 
     @Test
     void addCollection() {
-        Collection collection = new Collection("Collection Title");
+        Collection collection = new Collection("Collection Title", "http://mock-server.com");
 
+        when(clientMock.target("http://mock-server.com")).thenReturn(targetMock);
+        when(targetMock.path("/api/collection")).thenReturn(targetMock);
         when(builderMock.post(any(), eq(Collection.class))).thenReturn(collection);
 
-        Collection result = serverUtils.addCollection(collection);
+        ServerUtils spyServerUtils = spy(serverUtils);
+        doReturn(true).when(spyServerUtils).isServerAvailableWithAlert(anyString());
+
+        Collection result = spyServerUtils.addCollection(collection);
         assertNotNull(result);
         assertEquals("Collection Title", result.title);
         verify(builderMock).post(any(), eq(Collection.class));
     }
 
     @Test
-    void getCollections() {
-        Collection collection1 = new Collection("Collection Title 1");
-        Collection collection2 = new Collection("Collection Title 2");
-        List<Collection> collections = Arrays.asList(collection1, collection2);
-
-        when(builderMock.get(any(GenericType.class))).thenReturn(collections);
-
-        List<Collection> result = serverUtils.getCollections();
-        assertNotNull(result);
-        assertEquals(2, result.size());
-        assertEquals("Collection Title 1", result.get(0).title);
-        verify(builderMock).get(any(GenericType.class));
-    }
-
-    @Test
     void updateCollection() {
-        Collection collection = new Collection("Updated Collection Title");
+        Collection collection = new Collection("Collection Title", "http://mock-server.com");
+        collection.id = 1L;
+        Collection updatedCollection = new Collection("Updated Collection Title", "http://mock-server.com");
+        updatedCollection.id = 1L;
 
-        when(builderMock.put(any(), eq(Collection.class))).thenReturn(collection);
+        when(clientMock.target("http://mock-server.com")).thenReturn(targetMock);
+        when(targetMock.path("/api/collection/" + collection.id)).thenReturn(targetMock);
+        when(builderMock.put(any(), eq(Collection.class))).thenReturn(updatedCollection);
 
-        Collection result = serverUtils.updateCollection(collection);
+        ServerUtils spyServerUtils = spy(serverUtils);
+        doReturn(true).when(spyServerUtils).isServerAvailableWithAlert(anyString());
+
+        Collection result = spyServerUtils.updateCollection(collection);
+
         assertNotNull(result);
         assertEquals("Updated Collection Title", result.title);
+        assertEquals("http://mock-server.com", result.serverURL);
+        assertEquals(1L, result.id);
         verify(builderMock).put(any(), eq(Collection.class));
     }
 
     @Test
     void deleteCollection() {
-        serverUtils.deleteCollection(1L);
+        Collection collection = new Collection("Collection Title", "http://mock-server.com");
+        collection.id = 1L;
+
+        when(clientMock.target("http://mock-server.com")).thenReturn(targetMock);
+        when(targetMock.path("/api/collection/" + collection.id)).thenReturn(targetMock);
+
+        ServerUtils spyServerUtils = spy(serverUtils);
+        doReturn(true).when(spyServerUtils).isServerAvailableWithAlert(anyString());
+
+        spyServerUtils.deleteCollection(collection);
 
         verify(builderMock).delete();
     }
 
     @Test
-    void addFile() throws IOException {
-        Note note = new Note("Note", "Body", new Collection("Collection"));
+    void addFile() {
+        Collection collection = new Collection("Collection Title", "http://mock-server.com");
+        Note note = new Note("Note", "Body", collection);
+        note.id = 1L;
+
         File file = mock(File.class);
         when(file.getName()).thenReturn("file.txt");
         when(file.exists()).thenReturn(true);
         when(file.length()).thenReturn(1024L);
 
         EmbeddedFile expected = new EmbeddedFile(note, "file.txt", "text/plain", new byte[0]);
+
+        when(clientMock.target("http://mock-server.com")).thenReturn(targetMock);
+        when(targetMock.path("/api/notes/" + note.id + "/files")).thenReturn(targetMock);
         when(builderMock.post(any(), eq(EmbeddedFile.class))).thenReturn(expected);
-        EmbeddedFile result = serverUtils.addFile(note, file);
+
+        ServerUtils spyServerUtils = spy(serverUtils);
+        doReturn(true).when(spyServerUtils).isServerAvailableWithAlert(anyString());
+
+        EmbeddedFile result = spyServerUtils.addFile(note, file);
 
         assertNotNull(result);
         assertEquals(expected.getFileName(), result.getFileName());
@@ -203,45 +277,105 @@ class ServerUtilsTest {
 
     @Test
     void deleteFile() {
-        Note note = new Note("Note", "Body", new Collection("Collection"));
+        Collection collection = new Collection("Collection Title", "http://mock-server.com");
+        Note note = new Note("Note", "Body", collection);
+        note.id = 1L;
         EmbeddedFile file = new EmbeddedFile(note, "file.txt", "text/plain", new byte[0]);
+        file.setId(1L);
 
-        serverUtils.deleteFile(note, file);
+        when(clientMock.target("http://mock-server.com")).thenReturn(targetMock);
+        when(targetMock.path("api/notes/" + note.id + "/files/" + file.getId())).thenReturn(targetMock);
+
+        ServerUtils spyServerUtils = spy(serverUtils);
+        doReturn(true).when(spyServerUtils).isServerAvailableWithAlert(anyString());
+
+        spyServerUtils.deleteFile(note, file);
 
         verify(builderMock).delete();
     }
 
     @Test
     void renameFile() {
-        Note note = new Note("Note", "Body", new Collection("Collection"));
+        Collection collection = new Collection("Collection Title", "http://mock-server.com");
+        Note note = new Note("Note", "Body", collection);
+        note.id = 1L;
         EmbeddedFile file = new EmbeddedFile(note, "file.txt", "text/plain", new byte[0]);
+        file.setId(1L);
 
         EmbeddedFile expected = new EmbeddedFile(note, "renamedFile.txt", "text/plain", new byte[0]);
+
+        when(clientMock.target("http://mock-server.com")).thenReturn(targetMock);
+        when(targetMock.path("api/notes/" + note.id + "/files/" + file.getId() + "/rename")).thenReturn(targetMock);
         when(builderMock.put(any(), eq(EmbeddedFile.class))).thenReturn(expected);
 
-        EmbeddedFile result = serverUtils.renameFile(note, file, "renamedFile.txt");
+        ServerUtils spyServerUtils = spy(serverUtils);
+        doReturn(true).when(spyServerUtils).isServerAvailableWithAlert(anyString());
+
+        EmbeddedFile result = spyServerUtils.renameFile(note, file, "renamedFile.txt");
 
         assertNotNull(result);
-        assertEquals(expected, result);
+        assertEquals(expected.getFileName(), "renamedFile.txt");
         verify(builderMock).put(any(), eq(EmbeddedFile.class));
     }
 
     @Test
-    void testIsServerAvailable_ServerAvailable() {
-        when(builderMock.get()).thenReturn(responseMock);
-        when(responseMock.getStatus()).thenReturn(200);
+    void getFilesByNote() {
+        Collection collection = new Collection("Collection Title", "http://mock-server.com");
+        Note note = new Note("Note Title", "Note Body", collection);
+        note.id = 1L;
 
-        boolean result = serverUtils.isServerAvailable();
-        assertTrue(result);
-        verify(builderMock).get();
+        EmbeddedFile file1 = new EmbeddedFile(note, "file1.txt", "text/plain", new byte[0]);
+        EmbeddedFile file2 = new EmbeddedFile(note, "file2.txt", "text/plain", new byte[0]);
+        List<EmbeddedFile> expectedFiles = Arrays.asList(file1, file2);
+
+        when(clientMock.target("http://mock-server.com")).thenReturn(targetMock);
+        when(targetMock.path("/api/notes/" + note.id + "/files")).thenReturn(targetMock);
+        when(builderMock.get(any(GenericType.class))).thenReturn(expectedFiles);
+
+        ServerUtils spyServerUtils = spy(serverUtils);
+        doReturn(true).when(spyServerUtils).isServerAvailableWithAlert(anyString());
+
+        List<EmbeddedFile> result = spyServerUtils.getFilesByNote(note);
+
+        assertNotNull(result);
+        assertEquals(2, result.size());
+        assertEquals("file1.txt", result.get(0).getFileName());
+        assertEquals("file2.txt", result.get(1).getFileName());
+        verify(builderMock).get(any(GenericType.class));
     }
 
     @Test
-    void testIsServerAvailable_ServerUnavailable() {
-        when(builderMock.get()).thenThrow(new jakarta.ws.rs.ProcessingException(new ConnectException()));
+    void isServerAvailable_Success() {
+        when(clientMock.target("http://test.com")).thenReturn(targetMock);
+        when(targetMock.request(APPLICATION_JSON)).thenReturn(builderMock);
+        when(builderMock.get()).thenReturn(responseMock);
 
-        boolean result = serverUtils.isServerAvailable();
-        assertFalse(result);
-        verify(builderMock).get();
+        assertTrue(serverUtils.isServerAvailable("http://test.com"));
+    }
+
+    @Test
+    void isServerAvailable_ConnectionFails() {
+        when(clientMock.target("http://test.com")).thenReturn(targetMock);
+        when(targetMock.request(APPLICATION_JSON)).thenReturn(builderMock);
+        when(builderMock.get()).thenThrow(new ProcessingException(new ConnectException()));
+
+        assertFalse(serverUtils.isServerAvailable("http://test.com"));
+    }
+
+    @Test
+    void isServerAvailableWithAlert_ShowsDialogWhenUnavailable() {
+        Alert mockAlert = mock(Alert.class);
+        ServerUtils spyServerUtils = spy(serverUtils);
+        doReturn(false).when(spyServerUtils).isServerAvailable(anyString());
+        when(mockDialogStyler.createStyledAlert(any(), anyString(), anyString(), anyString()))
+                .thenReturn(mockAlert);
+
+        assertFalse(spyServerUtils.isServerAvailableWithAlert("http://test.com"));
+        verify(mockDialogStyler).createStyledAlert(
+                eq(Alert.AlertType.ERROR),
+                anyString(),
+                anyString(),
+                anyString()
+        );
     }
 }
